Fix: fixed overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 html,
 body {
     scroll-behavior: smooth;
-    ;
+    overflow-x: hidden;
 }
 
 body {
